Kubernetes/moodle-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: moodle
  labels:
    name: moodle
spec:
  containers:
    - name: moodle
      image: romero/moodleapp-apache-php
      ports:
        - containerPort: 80
          name: moodle
      volumeMounts:
          # Name must match the volume name below.
        - name: moodle-data
          # Mount path within the container.
          mountPath: /var/www/moodledata
  nodeName: gke-moodle-cluster-default-pool-7ea7bac9-ruxu
  volumes:
    - name: moodle-data
      gcePersistentDisk:
        # This GCE persistent disk must already exist.
        pdName: moodle-disk
        fsType: ext4
