Kubernetes/mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
    - resources:
        limits:
          cpu: 0.5
      name: mysql
      image: romero/moodle-mysql
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        - name: my-data
          mountPath: /var/lib/mysqldata
  nodeName: gke-moodle-cluster-default-pool-7ea7bac9-uujw
  volumes:
    - name: my-data
      gcePersistentDisk:
        pdName: mysql-disk
        fsType: ext4
