Kubernetes/moodle-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: moodlefrontend
  name: moodlefrontend
spec:
  type: LoadBalancer
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 80
      protocol: TCP
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    name: moodle
